--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-i18n": "^10.0.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@rushstack/eslint-patch": "^1.10.4",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.8.6",
@@ -27,11 +28,13 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "push-dir": "^0.4.1",
     "typescript": "~5.6.3",
+    "typescript-eslint": "^8.14.0",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.10"
   }
